--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<h2 class="major">Nuestra historia</h2>
 								<span class="image main"><img src="images/group-min.jpg" alt="" /></span>
 								<p>Todo inicio por una canción, les gustaba tanto como sonaba que quisieron interpretarla por si mismos. Es asi como Santiago y Harold empezaron a tocarla con su guitarra y viola respectivamente.
-									Sin embargo, aunque se habian aprendido sus parte, les faltaba algo para que sonara tan bien como lo hacia ese grupo que creo la canción.
+									Sin embargo, aunque se habian aprendido sus partes, les faltaba algo para que sonara tan bien como lo hacia ese grupo que creo la canción.
 									Asi, empezaron a preguntarle a algunos de sus amigos musicos quienes estuvieran, al igual que ellos, interesados en tocar esa pieza. En esta busqueda,
 									llego Angelica y Alex, una chelista y un violinista con los que se conformaria este grupo de musica que empezaria a llamar la atención del publico por su particular estilo de musica.</p>
 								<p>Desde entonces, han empezado a realizar covers sobre sus canciones favoritas, creando un estilo de musica que cautivaria a las personas
