correcion de ortografia

--- a/index.html
+++ b/index.html
@@ -45,27 +45,22 @@
 							<article id="intro">
 								<h2 class="major">Nuestra historia</h2>
 								<span class="image main"><img src="images/group-min.jpg" alt="" /></span>
-								<p>Todo inicio por una canción, les gustaba tanto como sonaba que quisieron interpretarla por si mismos. Es asi como Santiago y Harold empezaron a tocarla con su guitarra y viola respectivamente.
-									Sin embargo, aunque se habian aprendido sus partes, les faltaba algo para que sonara tan bien como lo hacia ese grupo que creo la canción.
-									Asi, empezaron a preguntarle a algunos de sus amigos musicos quienes estuvieran, al igual que ellos, interesados en tocar esa pieza. En esta busqueda,
-									llego Angelica y Alex, una chelista y un violinista con los que se conformaria este grupo de musica que empezaria a llamar la atención del publico por su particular estilo de musica.</p>
-								<p>Desde entonces, han empezado a realizar covers sobre sus canciones favoritas, creando un estilo de musica que cautivaria a las personas
-									por las mezcla entre los clasico y lo moderno. Desde lo clasico, hasta ritmos como pop, rock o electronica podras encontrar en sus canciones.
-									Ademas, su pasion por la musica los ha llevado a participar en diferentes eventos de la region, grabar y crear contenido musical para su audiencia en crecimiento.
+								<p>Todo inicio por una canción, les gustaba tanto como sonaba que quisieron interpretarla por sí mismos. Es así como Santiago y Harold empezaron a tocarla con su guitarra y viola respectivamente. Sin embargo, aunque se habían aprendido sus partes, les faltaba algo para que sonara tan bien como lo hacía ese grupo que creo la canción. Así, empezaron a preguntarle a algunos de sus amigos músicos quienes estuvieran, al igual que ellos, interesados en tocar esa pieza. En esta búsqueda, llego Angelica y Alex, una chelista y un violinista con los que se conformaría este grupo de música que empezaría a llamar la atención del público por su particular estilo de música.</p>
+								<p>Desde entonces, han empezado a realizar covers sobre sus canciones favoritas, creando un estilo de música que cautivaría a las personas por las mezcla entre los clásico y lo moderno. Desde lo clásico, hasta ritmos como pop, rock o electrónica podrás encontrar en sus canciones. Además, su pasión por la música los ha llevado a participar en diferentes eventos de la región, grabar y crear contenido musical para su audiencia en crecimiento.
 								</p>
-								<p>Aun estan empezando y desean con todo la emoción compartir su musica en muchas escenarios, no solo de colombia, sino del mundo.</p>
+								<p>Aun están empezando y desean con todo la emoción compartir su música en muchas escenarios, no solo de Colombia, sino del mundo.</p>
 								<span class="image main"><img src="images/studio-min.jpg" alt="" /></span>
 							</article>
 
 						<!-- Music -->
 							<article id="work">
 								<h2 class="major">Musica</h2>
-								<p>Te invitamos a nuestro canal en YouTube para que no pierdas de los ultimos videos sobre nuestas canciones y conciertos entre otros. Esperamos que te disfrutes de nuestro contenido. Si te gusto, no olvides compartirlo!
+								<p>Te invitamos a nuestro canal en YouTube para que no pierdas de los últimos videos sobre nuestras canciones y conciertos entre otros. Esperamos que disfrutes de nuestro contenido. Si te gusto, ¡no olvides compartirlo!
 								</p>
 								<div class="container">
 									<iframe class="responsive-iframe" width="100%" height="315" src="https://www.youtube.com/embed/LIhMAFcuw5k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 								</div>
-								<p>Tambien nos puedes encontrar en las siguientes plataformas de musica:</p>
+								<p>También nos puedes encontrar en las siguientes plataformas de música:</p>
 								<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/853418419&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/old-house-music" title="Old House Music" target="_blank" style="color: #cccccc; text-decoration: none;">Old House Music</a> · <a href="https://soundcloud.com/old-house-music/audeamus-cover" title="Audeamus (Cover)" target="_blank" style="color: #cccccc; text-decoration: none;">Audeamus (Cover)</a></div>
 							</article>
 
@@ -79,8 +74,8 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Escribenos</h2>
-								<p>Nos encantaria hablar contigo. Puedes enviarnos un email a nuestro correo <strong>oldhousemusic@gmail.com</strong>.</p>
-								<p>Tambien nos puedes contactar a traves de nuestras redes sociales que aparecen en la parte de abajo. Nos gustaria conocer tu opinion sobre nuestro trabajo. Estaremos atentos tus mensajes!</p>
+								<p>Nos encantaría hablar contigo. Puedes enviarnos un email a nuestro correo <strong>oldhousemusic@gmail.com</strong>.</p>
+								<p>También nos puedes contactar a través de nuestras redes sociales que aparecen en la parte de abajo. Nos gustaría conocer tu opinión sobre nuestro trabajo. ¡Estaremos atentos tus mensajes!</p>
 								<!-- <form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
@@ -128,15 +123,17 @@
 									<h4>Blockquote</h4>
 									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
 									<h4>Preformatted</h4>
-									<pre><code>i = 0;
-
-while (!deck.isInOrder()) {
-    print 'Iteration ' + i;
-    deck.shuffle();
-    i++;
-}
-
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
+									<pre>
+										<code>
+											i = 0;
+											while (!deck.isInOrder()) {
+												print 'Iteration ' + i;
+												deck.shuffle();
+												i++;
+											}
+											print 'It took ' + i + ' iterations to sort the deck.';
+										</code>
+									</pre>
 								</section>
 
 								<section>
